Male e Female styles e index

--- a/css/male_style.css
+++ b/css/male_style.css
@@ -1002,7 +1002,7 @@
 #submit {
   width: 25%;
   height: 46px;
-  background: #E86C8D;
+  background: #7B68EE;
   font-family: inherit;
   font-weight: bold;
   color: inherit;
